# sixten

./: .gitignore  .travis.yml  Annotation.hs  Branches.hs  Builtin.hs  CHANGELOG.md  CODE_OF_CONDUCT.md  Core.hs  Data.hs  Definition.hs  Desugar.hs  Erasure.hs  Hint.hs  Infer.hs  Input.hs  LICENCE  LICENSE  Lambda.hs  Main.hs  Meta.hs  Monad.hs  Normalise.hs  Parser.hs  Pretty.hs  README.md  Relevance.hs  TODO  TopoSort.hs  Unify.hs  Util.hs  appveyor.yml  dependent.cabal  funbox.cabal  sixten.cabal  stack.yaml  test.sh
app/: Main.hs
docs/: ASTs.md  ClosureConversion.md  FFI.vix  MetaVariables.md  PatternSyntax.md  QueryCompilerDriver.md  ShortDescription.md  Syntax.md
issues/: Bool-IfThenElse.vix  CircularType.vix  Data.vix  DepSize.vix  Fun.vix  Loop.vix  PatternMatching-ZipWith.vix  PatternSyntax.vix  PiPatterns.vix  TypeSynonym.vix
issues/code-generation/: CircularGlobal-Loop.vix  CircularGlobal.vix  EtaReductionReduced.vix  EtaReductionReduced2.vix  Primes.vix
issues/missing-feature/: List-Drop.vix  PatternSynonyms.vix
issues/syntax-error/: ImplicitForall.vix  LetWildcard.vix
issues/type-checking/: App.vix  Array.vix  Bool.vix  CircularType.vix  Constructors-Generalisation.vix  Container.vix  DepSize.vix  InstanceSignaturePropagation.vix  LocalInstanceUnification.vix  LongString.vix  Patterns-Arity.vix  Patterns-Implicits.vix  Patterns-ImplicitsInType.vix  PiPatterns.vix  Sigma.vix  Speed.vix  String.vix  TooMuchGeneralisation.vix  Tree.vix  Vector-AnySize-Nat.vix  Vector-AnySize.vix  Wildcard.vix
issues/type-error/: BoolFun.vix  DuplicateDefinition.vix  ImplicitApp.vix  InfiniteType-MutuallyRecursive.vix  InfiniteType-Tricky.vix
rts/: Builtin.vix  Builtin1.vix  Builtin2.vix  forwarddecls.ll
src/: .ghci  Builtin.hs  Close.hs  ClosureConvert.hs  Command.hs  Context.hs  Driver.hs  Dry.hs  Effect.hs  Erase.hs  Erasure.hs  Error.hs  FreeVar.hs  Fresh.hs  Generate.hs  Generate2.hs  Indirect.hs  Infer.hs  InferDirection.hs  InferErasability.hs  LLVM.hs  LanguageServer.hs  Lift.hs  Main.hs  Match.hs  Meta.hs  Monad.hs  MonadContext.hs  MonadFresh.hs  MonadLog.hs  Normalise.hs  Pretty.hs  Processor.hs  Relevance.hs  Resolve.hs  Restrict.hs  Simplify.hs  SourceLoc.hs  Syntax.hs  TCM.hs  (+10 more)
src/Analysis/: Cycle.hs  Denat.hs  Erasability.hs  Erase.hs  ReturnDirection.hs  Simplify.hs  Termination.hs
src/Backend/: Close.hs  ClosureConvert.hs  Compile.hs  ExtractExtern.hs  Generate.hs  LLVM.hs  Lift.hs  SLam.hs  Target.hs
src/Backend/Generate/: LLVM.hs  Submodule.hs  Types.hs
src/Builtin/: Names.hs
src/Command/: Check.hs  Compile.hs  LanguageServer.hs  Run.hs  Test.hs
src/Command/Check/: Options.hs
src/Command/Compile/: Options.hs
src/Command/LanguageServer/: Hover.hs
src/Driver/: Query.hs  Rules.hs
src/Effect/: Context.hs  Fresh.hs  Log.hs  Report.hs
src/Elaboration/: Constraint.hs  Constraint.hs-boot  Constructor.hs  Cycle.hs  Equal.hs  Generalise.hs  Match.hs  MetaVar.hs  Monad.hs  Normalise.hs  Subtype.hs  TypeOf.hs  Unify.hs
src/Elaboration/MetaVar/: Zonk.hs  Zonk.hs-boot
src/Elaboration/TypeCheck/: Class.hs  Clause.hs  Data.hs  Definition.hs  Expr.hs  Expr.hs-boot  Literal.hs  Pattern.hs
src/Frontend/: Declassify.hs  DupCheck.hs  Parse.hs  Resolve.hs  ResolveNames.hs  ScopeCheck.hs
src/Inference/: Class.hs  Class.hs-boot  Clause.hs  Constr.hs  Constraint.hs  Constraint.hs-boot  Constructor.hs  Cycle.hs  Equal.hs  Equality.hs  Generalise.hs  Match.hs  Meta.hs  MetaVar.hs  Monad.hs  Normalise.hs  Subtype.hs  TypeCheck.hs  TypeOf.hs  Unify.hs
src/LanguageServer/: Hover.hs
src/Match/: Pattern.hs
src/Processor/: Error.hs  File.hs  Files.hs  Result.hs
src/Syntax/: Abstract.hs  Annotation.hs  Binds.hs  Branches.hs  Class.hs  Closed.hs  Concrete.hs  ConstantSize.hs  Context.hs  Converted.hs  Core.hs  Data.hs  Definition.hs  Desugar.hs  Direction.hs  Extern.hs  GlobalBind.hs  Hint.hs  LL.hs  Lambda.hs  Let.hs  Lifted.hs  Literal.hs  Module.hs  ModuleHeader.hs  Name.hs  NameHint.hs  Parse.hs  Pattern.hs  Plicitness.hs  PreName.hs  Pretty.hs  Primitive.hs  QName.hs  Resolve.hs  Restricted.hs  SLambda.hs  SourceLoc.hs  Telescope.hs  Wet.hs
src/Util/: MultiHashMap.hs  Orphans.hs  TopoSort.hs  Tsil.hs
test/: Bool.hs  Bool.vix  Data.hs  Fun.hs  Fun2.hs  List.hs  List.hs-expected  List.vix  Pap.hs  Prop.hs  Test.hs  Tree.hs  Tree.vix  Tuple.hs  Void.hs  Void.vix  typeerror.vix
tests/: Bool.vix  List.vix  Main.hs
tests/success/: ADT.vix  App.vix-expected  Array-Append-Builtin-Nat.vix  Array-Append-Nat.vix  Bool-IfThenElse.vix  Bool.vix  Bool1.vix  CaseOfKnown-Tricky.vix  CaseOfKnown.vix  CircularType.vix  Data.vix  DepSize-Builtin-Nat.vix  DepSize.vix  Erasure-Loop.vix  Erasure.vix  EtaReduction.vix  EtaReductionReduced2.vix  Extern.vix  Fun.vix  FunSynonym.vix  HeadTail.vix  List-Drop.vix  List-Head.vix  List-SumTuple.vix  List.vix  ListImplicit.vix  MapPap.vix  MapPap.vix-expected  MutuallyRecursive.vix  MutuallyRecursiveType.vix  Pap.vix  Pap.vix-expected  PatternMatching-ZipWith.vix  PatternMatching-ZipWith2.vix  PatternSyntax.vix  Patterns-Arity.vix  Patterns-ConstructorImplicits.vix  Patterns-ImplicitArity.vix  Patterns-Implicits.vix  Patterns-ImplicitsInType.vix  (+16 more)
tests/syntax-error/: DataTypeSignature.vix  DataWhere.vix  DefRecovery.vix  DuplicateDefinition.vix  DuplicateDefinition2.vix  DuplicateTypeSignature.vix  DuplicateTypeSignature2.vix  ImplicitForall.vix  NoMatchingDefinition.vix  Recovery.vix  Recovery.vix-expected  TypeWhere.vix
tests/type-error/: AmbiguousConstructor.vix  CircularGlobal-Lambda.vix  CircularGlobal-Mutual.vix  CircularGlobal-MutualLambda.vix  CircularGlobal.vix  CircularGlobal2.vix  DuplicateDefinition.vix  InfiniteType-MutuallyRecursive.vix  InfiniteType-MutuallyRecursive2.vix  InfiniteType-Tricky.vix  InfiniteType.vix  Loop.vix  OccursCheck.vix  Patterns-ConstructorImplicits.vix  Patterns-TooFewArgs.vix  Patterns-TooManyArgs.vix  TypeMismatch.vix  TypeMismatch2.vix  ambiguous-constructor.vix  infinite-type.vix
vim/ftdetect/: sixten.vim
vim/ftplugin/: sixten.vim
vim/syntax/: sixten.vim
(+216 files in other folders)
