name:                funbox
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           (c) 2015-2016 Olle Fredriksson
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable funbox
  ghc-options:         -Wall -funbox-strict-fields
  main-is:             Main.hs
  build-depends:       wl-pprint-text,
                       base >=4.8 && <4.9,
                       bifunctors,
                       bound,
                       containers,
                       hashable,
                       monad-st,
                       mtl,
                       parsers,
                       prelude-extras,
                       text,
                       trifecta,
                       unordered-containers,
                       vector,
                       void
  hs-source-dirs:      src
  default-language:    Haskell2010
