name:                sixten
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           (c) 2014-2017 Olle Fredriksson
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10
data-files:
                     rts/forwarddecls.ll
                     rts/Builtin1.vix
                     rts/Builtin2.vix

executable sixten
  ghc-options:         -Wall
                       -Wcompat
                       -funbox-strict-fields
  main-is:             Main.hs
  other-modules:
                       Analysis.Denat
                       Analysis.ReturnDirection
                       Analysis.Simplify
                       Backend.ClosureConvert
                       Backend.Compile
                       Backend.ExtractExtern
                       Backend.Generate
                       Backend.Generate.LLVM
                       Backend.Generate.Types
                       Backend.Lift
                       Backend.SLam
                       Backend.Target
                       Builtin
                       Builtin.Names
                       Command.Check
                       Command.Check.Options
                       Command.Compile
                       Command.Compile.Options
                       Command.Run
                       Command.Test
                       Error
                       FreeVar
                       Frontend.Parse
                       Frontend.ResolveNames
                       Inference.Constraint
                       Inference.Constructor
                       Inference.Cycle
                       Inference.Equal
                       Inference.Generalise
                       Inference.Match
                       Inference.MetaVar
                       Inference.MetaVar.Zonk
                       Inference.Monad
                       Inference.Normalise
                       Inference.Subtype
                       Inference.TypeCheck.Class
                       Inference.TypeCheck.Clause
                       Inference.TypeCheck.Data
                       Inference.TypeCheck.Definition
                       Inference.TypeCheck.Expr
                       Inference.TypeCheck.Pattern
                       Inference.TypeOf
                       Inference.Unify
                       MonadContext
                       MonadFresh
                       Paths_sixten
                       Pretty
                       Processor.File
                       Processor.Files
                       Processor.Result
                       Syntax
                       Syntax.Annotation
                       Syntax.Branches
                       Syntax.Class
                       Syntax.Core
                       Syntax.Core.Pattern
                       Syntax.Data
                       Syntax.Definition
                       Syntax.Direction
                       Syntax.Closed
                       Syntax.Extern
                       Syntax.GlobalBind
                       Syntax.Let
                       Syntax.Literal
                       Syntax.Module
                       Syntax.Name
                       Syntax.NameHint
                       Syntax.Pattern
                       Syntax.Pre.Definition
                       Syntax.Pre.Literal
                       Syntax.Pre.Pattern
                       Syntax.Pre.Scoped
                       Syntax.Pre.Unscoped
                       Syntax.PreName
                       Syntax.Sized.Anno
                       Syntax.Sized.Definition
                       Syntax.Sized.Extracted
                       Syntax.Sized.Lifted
                       Syntax.Sized.SLambda
                       Syntax.Telescope
                       TypeRep
                       TypedFreeVar
                       Util
                       Util.MultiHashMap
                       Util.TopoSort
                       Util.Tsil
                       VIX
  build-depends:
                       base >=4.8 && <4.11,
                       bound,
                       bytestring,
                       containers,
                       deriving-compat,
                       directory,
                       filepath,
                       hashable,
                       lifted-base,
                       llvm-hs-pure,
                       llvm-hs-pretty,
                       mmorph,
                       monad-control,
                       mtl,
                       multiset,
                       optparse-applicative,
                       parsers,
                       parsix,
                       prettyprinter,
                       prettyprinter-ansi-terminal,
                       process,
                       semigroups,
                       split,
                       temporary,
                       text,
                       transformers,
                       transformers-base,
                       unordered-containers,
                       vector,
                       void
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:
  build-depends:       base >= 4.8 && < 4.11
  default-language:    Haskell2010

Test-suite test-sixten
  hs-source-dirs:      tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 4.11,
                       bytestring,
                       directory,
                       filepath,
                       process,
                       sixten,
                       tasty,
                       tasty-golden,
                       tasty-program
  default-language:    Haskell2010
