name:                sixten
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           (c) 2014-2018 Olle Fredriksson
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10
data-files:
                     rts/forwarddecls.ll
                     rts/Builtin1.vix
                     rts/Builtin2.vix


executable sixten
  default-extensions:  NoImplicitPrelude
  ghc-options:
                       -Wall
                       -Wcompat
                       -Widentities
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wtabs
                       -funbox-strict-fields
  main-is:             Main.hs
  other-modules:
                       Analysis.Cycle
                       Analysis.Denat
                       Analysis.ReturnDirection
                       Analysis.Simplify
                       Backend.ClosureConvert
                       Backend.Compile
                       Backend.ExtractExtern
                       Backend.Generate
                       Backend.Generate.LLVM
                       Backend.Generate.Types
                       Backend.Lift
                       Backend.SLam
                       Backend.Target
                       Builtin
                       Builtin.Names
                       Command.Check
                       Command.Check.Options
                       Command.Compile
                       Command.Compile.Options
                       Command.LanguageServer
                       Command.LanguageServer.Hover
                       Command.Run
                       Command.Test
                       Elaboration.Constraint
                       Elaboration.Constructor
                       Elaboration.Equal
                       Elaboration.Generalise
                       Elaboration.Match
                       Elaboration.MetaVar
                       Elaboration.MetaVar.Zonk
                       Elaboration.Monad
                       Elaboration.Normalise
                       Elaboration.Subtype
                       Elaboration.TypeCheck.Class
                       Elaboration.TypeCheck.Clause
                       Elaboration.TypeCheck.Data
                       Elaboration.TypeCheck.Definition
                       Elaboration.TypeCheck.Expr
                       Elaboration.TypeCheck.Literal
                       Elaboration.TypeCheck.Pattern
                       Elaboration.TypeOf
                       Elaboration.Unify
                       Error
                       FreeVar
                       Frontend.DupCheck
                       Frontend.Parse
                       Frontend.ResolveNames
                       MonadContext
                       MonadFresh
                       MonadLog
                       Paths_sixten
                       Pretty
                       Processor.File
                       Processor.Files
                       Processor.Result
                       Syntax
                       Syntax.Annotation
                       Syntax.Branches
                       Syntax.Class
                       Syntax.Closed
                       Syntax.Core
                       Syntax.Core.Pattern
                       Syntax.Data
                       Syntax.Definition
                       Syntax.Direction
                       Syntax.Extern
                       Syntax.GlobalBind
                       Syntax.Let
                       Syntax.Literal
                       Syntax.ModuleHeader
                       Syntax.Name
                       Syntax.NameHint
                       Syntax.Pattern
                       Syntax.Pre.Definition
                       Syntax.Pre.Literal
                       Syntax.Pre.Pattern
                       Syntax.Pre.Scoped
                       Syntax.Pre.Unscoped
                       Syntax.PreName
                       Syntax.QName
                       Syntax.Sized.Anno
                       Syntax.Sized.Definition
                       Syntax.Sized.Extracted
                       Syntax.Sized.Lifted
                       Syntax.Sized.SLambda
                       Syntax.Telescope
                       TypeRep
                       TypedFreeVar
                       Util
                       Util.MultiHashMap
                       Util.TopoSort
                       Util.Tsil
                       VIX
  build-depends:
                       List,
                       aeson,
                       base >=4.8 && <4.12,
                       bound,
                       bytestring,
                       containers,
                       data-default,
                       deriving-compat,
                       directory,
                       filepath,
                       hashable,
                       haskell-lsp,
                       haskell-lsp-types,
                       lifted-base,
                       llvm-hs-pretty,
                       llvm-hs-pure,
                       mmorph,
                       monad-control,
                       mtl,
                       multiset,
                       optparse-applicative,
                       parsers,
                       parsix,
                       prettyprinter,
                       prettyprinter-ansi-terminal,
                       process,
                       protolude,
                       split,
                       stm,
                       temporary,
                       text,
                       transformers,
                       transformers-base,
                       unordered-containers,
                       vector,
                       void,
                       yi-rope
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:
  build-depends:       base >= 4.8 && < 4.12
  default-language:    Haskell2010

Test-suite test-sixten
  hs-source-dirs:      tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 4.12,
                       directory,
                       filepath,
                       tasty,
                       tasty-golden,
                       tasty-program
  default-language:    Haskell2010
