cabal-version:       2.2
name:                sixten
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Olle Fredriksson
maintainer:          fredriksson.olle@gmail.com
copyright:           (c) 2014-2019 Olle Fredriksson
category:            Language
build-type:          Simple
-- extra-source-files:
data-files:
                     rts/forwarddecls.ll
                     rts/Builtin.vix

common common
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:
                       -Wall
                       -Wcompat
                       -Widentities
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wtabs
                       -funbox-strict-fields
  build-depends:
                       base >=4.8 && <4.13,
                       protolude

executable sixten
  import:              common
  hs-source-dirs:      app
  ghc-options:
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:
                       sixten,
                       optparse-applicative

library
  import:              common
  hs-source-dirs:      src
  exposed-modules:     Command
  other-modules:
                       Analysis.Cycle
                       Analysis.Denat
                       Analysis.ReturnDirection
                       Analysis.Simplify
                       Analysis.Termination
                       Backend.ClosureConvert
                       Backend.Compile
                       Backend.ExtractExtern
                       Backend.Generate
                       Backend.Generate.LLVM
                       Backend.Generate.Submodule
                       Backend.Generate.Types
                       Backend.Lift
                       Backend.SLam
                       Backend.Target
                       Builtin
                       Builtin.Names
                       Command.Check
                       Command.Check.Options
                       Command.Compile
                       Command.Compile.Options
                       Command.LanguageServer
                       Command.Run
                       Command.Test
                       Driver
                       Driver.Query
                       Driver.Rules
                       Effect
                       Effect.Context
                       Effect.Fresh
                       Effect.Log
                       Effect.Report
                       Elaboration.Constraint
                       Elaboration.Constructor
                       Elaboration.Equal
                       Elaboration.Generalise
                       Elaboration.Match
                       Elaboration.MetaVar
                       Elaboration.MetaVar.Zonk
                       Elaboration.Monad
                       Elaboration.Normalise
                       Elaboration.Subtype
                       Elaboration.TypeCheck.Class
                       Elaboration.TypeCheck.Clause
                       Elaboration.TypeCheck.Data
                       Elaboration.TypeCheck.Definition
                       Elaboration.TypeCheck.Expr
                       Elaboration.TypeCheck.Literal
                       Elaboration.TypeOf
                       Elaboration.Unify
                       Elaboration.Unify.Indices
                       Error
                       Frontend.DupCheck
                       Frontend.Parse
                       Frontend.ResolveNames
                       LanguageServer
                       LanguageServer.Hover
                       Paths_sixten
                       Pretty
                       Syntax
                       Syntax.Annotation
                       Syntax.Branches
                       Syntax.Class
                       Syntax.Closed
                       Syntax.Context
                       Syntax.Core
                       Syntax.Data
                       Syntax.Definition
                       Syntax.Direction
                       Syntax.Extern
                       Syntax.GlobalBind
                       Syntax.Let
                       Syntax.Literal
                       Syntax.ModuleHeader
                       Syntax.Name
                       Syntax.NameHint
                       Syntax.Pattern
                       Syntax.Pre.Definition
                       Syntax.Pre.Literal
                       Syntax.Pre.Scoped
                       Syntax.Pre.Unscoped
                       Syntax.PreName
                       Syntax.QName
                       Syntax.Sized.Anno
                       Syntax.Sized.Definition
                       Syntax.Sized.Extracted
                       Syntax.Sized.Lifted
                       Syntax.Sized.SLambda
                       Syntax.Telescope
                       TypeRep
                       Util
                       Util.MultiHashMap
                       Util.Orphans
                       Util.TopoSort
                       Util.Tsil
                       VIX
  build-depends:
                       List,
                       bound,
                       bytestring,
                       bifunctors,
                       containers,
                       data-default,
                       dependent-map,
                       dependent-sum,
                       deriving-compat,
                       deriving-gcompare,
                       directory,
                       filepath,
                       fsnotify,
                       hashable,
                       haskell-lsp,
                       haskell-lsp-types,
                       lens,
                       llvm-hs-pretty,
                       llvm-hs-pure,
                       mmorph,
                       monad-control,
                       mtl,
                       multiset,
                       optparse-applicative,
                       parsers,
                       parsix,
                       prettyprinter,
                       prettyprinter-ansi-terminal,
                       process,
                       rock,
                       split,
                       stm,
                       temporary,
                       text,
                       time,
                       transformers,
                       unordered-containers,
                       vector,
                       vector-instances,
                       yi-rope

Test-suite test-sixten
  import:              common
  hs-source-dirs:      tests
  type:                exitcode-stdio-1.0
  ghc-options:
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
  main-is:             Main.hs
  build-depends:
                       directory,
                       filepath,
                       tasty,
                       tasty-golden,
                       tasty-program,
                       unordered-containers
